<resources>
    <string name="app_name">AMA</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="questions">Questions</string>
    <string name="questions_asked">Questions Asked</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="continue_one">Continue</string>
    <string name="continue_two">Finish</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_location">Location</string>
    <string name="hint_year_of_birth">Year of Birth</string>
    <string name="hint_bio">Bio</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="one_last_step">Almost Done, Just One Last Step</string>
    <string name="search_by_name">Search By Name</string>
    <string name="location_icon">location icon</string>
    <string name="ask_a_question_edit_text">Ask A Question</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="ask">Ask</string>
    <string name="answer">Answer</string>
    <string name="your_answer">Your Answer</string>
    <string name="type_answer_first">You have to type an answer first!</string>
    <string name="users_you_follow">Users You Follow</string>
    <string name="hint_update_your_name">Update Your Name</string>
    <string name="update">Update</string>
</resources>
