<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <ImageView
        android:id="@+id/user_profile_location_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/user_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_name"
        app:srcCompat="@drawable/ic_location"
        android:contentDescription="@string/location_icon" />

    <TextView
        android:id="@+id/user_profile_location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="Location"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_location_image_view"
        app:layout_constraintStart_toEndOf="@+id/user_profile_location_image_view"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_location_image_view" />

    <TextView
        android:id="@+id/user_profile_bio_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/user_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_location_text_view"
        tools:text="Bio" />

    <View
        android:id="@+id/user_profile_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_bio_text_view" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_profile_questions_answered_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_ask_button" />

    <Button
        android:id="@+id/user_profile_follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_button"
        android:padding="15dp"
        android:text="@string/follow"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_profile_name" />

    <EditText
        android:id="@+id/user_profile_ask_question_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ask_a_question_edit_text"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_divider" />

    <Button
        android:id="@+id/user_profile_ask_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/ask"
        android:background="@drawable/round_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_ask_question_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_profile_ask_question_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_ask_question_edit_text" />

    <ProgressBar
        android:id="@+id/user_profile_follow_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_profile_name" />

    <ProgressBar
        android:id="@+id/user_profile_ask_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_ask_question_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_profile_ask_question_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_ask_question_edit_text" />
</android.support.constraint.ConstraintLayout>